Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112881

QFileDialog::saveFileContent() not working on Chrome

    XMLWordPrintable

Details

    • WebAssembly
    • d09855ae7 (dev), 2328320ab (6.5)

    Description

      Calling QFileDialog::saveFileContent() does not work correctly on Chrome even for a simple text file.  It does prompt using a native file save dialog but once selected the target file is only created with zero bytes content.

      It does seem to work on Firefox and Safari though.

      I am using the multi threading version of WASM on Qt 6.5.0 running on macOS 13.2.1 and the latest Chrome browser.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mikolaj.boc Mikołaj Boc (Inactive)
            pcheeseman Peter Cheeseman
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes